--- a/index.html
+++ b/index.html
@@ -451,11 +451,11 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
         <article class="card">
           <div class="image-frame"><img src="new.png" alt="XXL (Without chip Try-fold pads)"></div>
           <h3>Saheli Care XXL (Without chip Try-fold pads)</h3>
-          <div class="price">₹250/ ( 42+42=84 Pads )</div>
+          <div class="price">₹250/ ( 10 Pack ( 7 pads  )</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('XXL (Without chip Try-fold pads)','₹250','new.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="XXL (Without chip Try-fold pads)" data-price="₹250">Order via WhatsApp</button>
+            <button class="btn btn-outline" onclick="openModal('XXL 10 pack (Without chip Try-fold pads)','₹250','new.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XXL 10 pack (Without chip Try-fold pads)" data-price="₹250">Order via WhatsApp</button>
           </div>
         </article>
       </div>
@@ -949,6 +949,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   </script>
 </body>
 </html>
+
 
 
 
