--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
         <article class="card">
           <div class="image-frame"><img src="new.png" alt="XXL (Without chip Try-fold pads)"></div>
           <h3>Saheli Care XXL (Without chip Try-fold pads)</h3>
-          <div class="price">₹250/ ( 10 Pack ( 7 pads  )</div>
+          <div class="price">₹250/ ( 10 Pack ( Per Packet 7 pads  )</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
             <button class="btn btn-outline" onclick="openModal('XXL 10 pack (Without chip Try-fold pads)','₹250','new.png')">Quick view</button>
@@ -465,7 +465,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
         <article class="card" role="listitem">
           <div class="image-frame"><img src="3.png" alt="XL Straight Pads ( soft & Comfortable )"></div>
           <h3>Saheli Care XL Straight Pads ( soft & Comfortable )</h3>
-          <div class="price">₹250 / 1 pack<br>( 7 peace pads) <br></div>
+          <div class="price">₹250 / 1 pack<br>( Per Packet 6 pads) <br></div>
           <p style="color:var(--muted)">Comfort fit for daily use, thin and absorbent.</p>
           <div class="actions">
             <button class="btn btn-outline" onclick="openModal('XL Straight Pads ( soft & Comfortable )','₹250','3.png')">Quick view</button>
@@ -476,7 +476,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
         <article class="card">
           <div class="image-frame"><img src="Buy 1 Get 1 Free.png" alt="XXL Jumbo Pack ( buy 1 get 1 free ) "></div>
           <h3>Saheli Care XXL Jumbo Pack ( buy 1 get 1 free )(Soft & Comfortable)</h3>
-          <div class="price">₹399  <br>(42 + 42 = 84 pads) <br></div>
+          <div class="price">₹399  <br>(Per Packet 42 + 42 = 84 pads) <br></div>
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
             <button class="btn btn-outline" onclick="openModal('XXL Jumbo Pack ( buy 1 get 1 free )','₹399','Buy 1 Get 1 Free.png')">Quick view</button>
@@ -484,20 +484,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
           </div>
         </article>
       <!-- Offer -->
-      <div style="margin:12px 0;">
-        <div class="diwali-card">
-          <div class="diwali-image"><img src="offer.png" alt="Offer"></div>
-          <div>
-            <h3 style="margin:0">New Offer — 10 pack</h3>
-            <div style="color:var(--accent);font-weight:800">Only ₹250</div>
-          </div>
-          <div style="margin-left:auto">
-            <button class="wa-btn order-btn shine" id="diwaliBtn" data-product="Diwali Special - 10 pack" data-price="₹250">Order Now</button>
-          </div>
-        </div>
-      </div>
-    </section>
-
+      
     <section id="about" style="margin-top:8px">
       <h2>About Saheli Care</h2>
       <p style="color:var(--muted)"><h3>Saheli Care is a modern menstrual hygiene brand committed to providing women with safe, comfortable, and high-quality sanitary products. 
@@ -949,6 +936,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   </script>
 </body>
 </html>
+
 
 
 
