--- a/index.html
+++ b/index.html
@@ -64,8 +64,21 @@
 
     .products-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin:12px 0}
     .card{background:var(--card);padding:10px;border-radius:10px;box-shadow:0 8px 20px rgba(12,18,24,0.06);display:flex;flex-direction:column}
-    .image-frame{height:140px;background:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;padding:8px}
-    .image-frame img{max-height:100%;max-width:100%;object-fit:contain;border-radius:6px;display:block}
+    /* 🔥 Bigger product image frame */
+    .image-frame{
+      height:220px;              /* was 140px */
+      background:#fff;
+      border-radius:8px;
+      display:flex;align-items:center;justify-content:center;
+      padding:0;                 /* remove inner padding so image gets more space */
+    }
+    .image-frame img{
+      max-height:100%;
+      max-width:100%;
+      object-fit:contain;
+      display:block;
+      border-radius:6px;
+    }
     .card h3{margin:8px 0 6px;font-size:15px}
     .price{font-weight:700;margin-bottom:8px}
     .card .actions{margin-top:auto;display:flex;gap:8px}
@@ -112,7 +125,7 @@
       .card .actions{flex-direction:column}
       .btn,.wa-btn,.btn-outline{width:100%}
       .diwali-card{flex-direction:column;align-items:flex-start}
-      .image-frame{height:160px}
+      .image-frame{height:220px} /* was 160px -> bigger on mobile too */
       .modal-card{padding:12px}
     }
 
@@ -136,7 +149,7 @@
     .footer-copy{ font-size:13px; opacity:.8; margin-top:12px }
     @media (max-width:640px){ .footer-social{gap:14px} .social-icon{width:38px;height:38px;font-size:18px} }
 
-    /* ===== Reviews (unchanged styles you had) ===== */
+    /* ===== Reviews ===== */
     .rv-card{background:#fff; padding:12px; border-radius:12px; box-shadow:0 8px 24px rgba(11,16,23,0.06); display:flex; gap:14px; flex-wrap:wrap; margin-top:10px}
     .rv-stars{display:flex; gap:4px; align-items:center; flex-direction:row-reverse}
     .rv-stars input{display:none}
@@ -207,7 +220,7 @@
       </div>
     </section>
 
-    <!-- PRODUCTS (CLEANED) -->
+    <!-- PRODUCTS -->
     <section id="products">
       <h2 style="margin-top:8px">Popular Products</h2>
 
@@ -464,7 +477,6 @@
         orderForm.reset();
       }
 
-      // Attach to all "Order via WhatsApp" buttons
       document.querySelectorAll('.order-btn').forEach(btn=>{
         btn.addEventListener('click', (e)=>{
           e.preventDefault();
@@ -474,7 +486,6 @@
         });
       });
 
-      // Offer button
       const diwaliBtn = document.getElementById('diwaliBtn');
       if(diwaliBtn){
         diwaliBtn.addEventListener('click', (e)=>{
@@ -485,13 +496,11 @@
         });
       }
 
-      // Close modal
       orderClose.addEventListener('click', closeOrderModal);
       orderCancel.addEventListener('click', closeOrderModal);
       orderModal.addEventListener('click', (e)=>{ if(e.target === orderModal) closeOrderModal(); });
       document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') closeOrderModal(); });
 
-      // Submit -> WhatsApp
       orderForm.addEventListener('submit', (e)=>{
         e.preventDefault();
         const name = document.getElementById('custName').value.trim();
@@ -499,12 +508,10 @@
         const address = document.getElementById('custAddress').value.trim();
         const pincode = document.getElementById('custPincode').value.trim();
         const qty = document.getElementById('custQty').value;
-
         if(!name || !phone || !address || !pincode){
           alert('Please fill all required fields (Name, Phone, Address, Pincode).');
           return;
         }
-
         const lines = [];
         lines.push('*Saheli Care — New Order*','');
         lines.push('🛒 Product: ' + currentProduct.name);
