--- a/index.html
+++ b/index.html
@@ -283,6 +283,18 @@
         </article>
       </div>
 
+       <article class="card">
+          <div class="image-frame"><img src="new oxi 10 pack.png" alt="XL Oxi Brite Sanitary Pads 10 Packet"></div>
+          <h3>XL Oxi Brite Sanitary Pads 10 Packet</h3>
+          <div class="price">₹520 <br>(Per Packet 6 pads)</div>
+          <p style="color:var(--muted)">Overnight protection with full coverage.</p>
+          <div class="actions">
+            <button class="btn btn-outline" onclick="openModal('XL Oxi Brite Sanitary Pads 10 Packet','₹520','new oxi 10 pack.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XL Oxi Brite Sanitary Pads 10 Packet" data-price="₹520">Order via WhatsApp</button>
+          </div>
+        </article>
+      </div>
+
       <!-- Offer -->
       <div style="margin:12px 0;">
         <div class="diwali-card">
@@ -628,3 +640,4 @@
   </script>
 </body>
 </html>
+
