--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <article class="card" role="listitem">
           <div class="image-frame"><img src="5.png" alt="XL (without chip Try-fold Pad)"></div>
           <h3>Saheli Care (XL Pads) Try-fold (Soft & Comfortable)</h3>
-          <div class="price">₹250 / 10 Pack <br>(per packet 7 pads) <br>(Limited Time Offer)</div>
+          <div class="price">₹250 / 10 Pack <br>(per packet 7 pads) <br>(Limited Time Offer) <br> 100 ML Observation</div>
           <p style="color:var(--muted)">Comfort fit for daily use, thin and absorbent.</p>
           <div class="actions">
             <button class="btn btn-outline" onclick="openModal('XL (without chip Try-fold Pad)','₹250','5.png')">Quick view</button>
@@ -239,7 +239,7 @@
         <article class="card">
           <div class="image-frame"><img src="2.png" alt="XL (Anion Chip ,Magic Gel Pads)"></div>
           <h3>Saheli Care XL Pads (Anion Chip, Magic Gel Pads)</h3>
-          <div class="price">₹350 / 10 Pack <br>(per packet 7 pads) <br>(Limited Time Offer)</div>
+          <div class="price">₹350 / 10 Pack <br>(per packet 6 pads) <br>(Limited Time Offer) <br> 150 ML Observation</div>
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
             <button class="btn btn-outline" onclick="openModal('XL (Anion Chip ,Magic Gel Pads)','₹350','2.png')">Quick view</button>
@@ -284,12 +284,12 @@
       
 
        <article class="card">
-          <div class="image-frame"><img src="new oxi 10 pack.png" alt="XL Oxi Brite Sanitary Pads 10 Packet"></div>
-          <h3>XL Oxi Brite Sanitary Pads 10 Packet</h3>
+          <div class="image-frame"><img src="oxi.png" alt="XL Oxi Brite Sanitary Pads 10 Packet"></div>
+          <h3>XL Oxi Brite Sanitary Pads 20 Packet</h3>
           <div class="price">₹520 <br>(Per Packet 6 pads)</div>
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('XL Oxi Brite Sanitary Pads 10 Packet','₹520','new oxi 10 pack.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('XL Oxi Brite Sanitary Pads 10 Packet','₹520','oxi.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="XL Oxi Brite Sanitary Pads 10 Packet" data-price="₹520">Order via WhatsApp</button>
           </div>
         </article>
@@ -640,5 +640,6 @@
   </script>
 </body>
 </html>
+
 
 
