--- a/index.html
+++ b/index.html
@@ -167,6 +167,73 @@
     .rv-item .rv-msg{margin:6px 0 0; font-size:14px}
     .rv-empty{ background:#fff; padding:12px; border-radius:12px; color:#6b7280; border:1px dashed #e5e7eb; text-align:center }
     @media (max-width:640px){ .rv-card{padding:10px} }
+
+    /* ===== Help & Care Section ===== */
+.help-wrap{
+  background:#fff;
+  padding:14px;
+  border-radius:12px;
+  box-shadow:0 8px 24px rgba(11,16,23,0.06);
+}
+.help-head h2{ margin:0 0 4px 0 }
+.help-head p{ margin:0; color:var(--muted) }
+
+.help-grid{
+  display:grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap:10px;
+  margin-top:12px;
+}
+@media (max-width:900px){
+  .help-grid{ grid-template-columns: repeat(2, 1fr); }
+}
+@media (max-width:640px){
+  .help-grid{ grid-template-columns: 1fr; }
+}
+
+.help-card{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  padding:12px;
+  background:linear-gradient(0deg,#ffffff, #ffffff);
+  border:1px solid #eef2f6;
+  border-radius:12px;
+  text-decoration:none;
+  color:var(--dark);
+  transition:transform .15s ease, box-shadow .15s ease, border-color .15s ease;
+  position:relative; overflow:hidden;
+}
+.help-card:hover{
+  transform: translateY(-2px);
+  box-shadow:0 10px 26px rgba(12,18,24,0.08);
+  border-color:#e4ebf5;
+}
+.help-icon{
+  flex:0 0 42px;
+  width:42px; height:42px;
+  border-radius:10px;
+  display:flex; align-items:center; justify-content:center;
+  background:linear-gradient(90deg,var(--accent),var(--accent-700));
+  color:#fff; box-shadow:0 6px 16px rgba(255,107,159,.25);
+}
+.help-meta{ display:flex; flex-direction:column; line-height:1.2 }
+.help-label{ font-size:12px; color:var(--muted) }
+.help-number{ font-weight:800; letter-spacing:.2px }
+.help-cta{ font-size:12px; color:var(--accent-700); font-weight:700 }
+
+/* Shine effect reuse */
+.help-card.shine::after{
+  content:"";
+  position:absolute; top:0; left:-120%;
+  width:40%; height:100%;
+  background: linear-gradient(120deg, rgba(255,255,255,0.06) 0%, rgba(255,255,255,0.35) 50%, rgba(255,255,255,0.06) 100%);
+  transform:skewX(-20deg);
+  transition: left .9s cubic-bezier(.2,.8,.2,1);
+  pointer-events:none;
+}
+.help-card.shine:hover::after{ left:120%; }
+
   </style>
 </head>
 <body>
@@ -294,6 +361,75 @@
           </div>
         </article>
       </div>
+
+        <!-- ===== HELP & CARE (Click-to-Call) ===== -->
+<section id="help-care" class="container" style="margin-top:18px">
+  <div class="help-wrap">
+    <div class="help-head">
+      <h2>Help & Care</h2>
+      <p>तुरंत सहायता के लिए नीचे दिए गए नंबर पर कॉल करें</p>
+    </div>
+
+    <div class="help-grid">
+      <!-- Card 1 -->
+      <a class="help-card shine" href="tel:+918750406022" aria-label="Call 8750406022">
+        <span class="help-icon" aria-hidden="true">
+          <!-- phone svg -->
+          <svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
+            <path d="M21 16.5v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07A19.5 19.5 0 0 1 3.57 9.81 19.79 19.79 0 0 1 .5 1.18 2 2 0 0 1 2.5 0h3a2 2 0 0 1 2 1.72c.12.9.33 1.77.63 2.6a2 2 0 0 1-.45 2.11L6.5 7.5a16 16 0 0 0 10 10l1.07-1.18a2 2 0 0 1 2.11-.45c.83.3 1.7.51 2.6.63A2 2 0 0 1 21 16.5z"/>
+          </svg>
+        </span>
+        <div class="help-meta">
+          <span class="help-label">Customer Care</span>
+          <span class="help-number">87504 06022</span>
+          <span class="help-cta">Tap to Call</span>
+        </div>
+      </a>
+
+      <!-- Card 2 -->
+      <a class="help-card shine" href="tel:+918750402224" aria-label="Call 8750402224">
+        <span class="help-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
+            <path d="M21 16.5v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07A19.5 19.5 0 0 1 3.57 9.81 19.79 19.79 0 0 1 .5 1.18 2 2 0 0 1 2.5 0h3a2 2 0 0 1 2 1.72c.12.9.33 1.77.63 2.6a2 2 0 0 1-.45 2.11L6.5 7.5a16 16 0 0 0 10 10l1.07-1.18a2 2 0 0 1 2.11-.45c.83.3 1.7.51 2.6.63A2 2 0 0 1 21 16.5z"/>
+          </svg>
+        </span>
+        <div class="help-meta">
+          <span class="help-label">Order & Delivery</span>
+          <span class="help-number">87504 02224</span>
+          <span class="help-cta">Tap to Call</span>
+        </div>
+      </a>
+
+      <!-- Card 3 -->
+      <a class="help-card shine" href="tel:+918750402024" aria-label="Call 8750402024">
+        <span class="help-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
+            <path d="M21 16.5v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07A19.5 19.5 0 0 1 3.57 9.81 19.79 19.79 0 0 1 .5 1.18 2 2 0 0 1 2.5 0h3a2 2 0 0 1 2 1.72c.12.9.33 1.77.63 2.6a2 2 0 0 1-.45 2.11L6.5 7.5a16 16 0 0 0 10 10l1.07-1.18a2 2 0 0 1 2.11-.45c.83.3 1.7.51 2.6.63A2 2 0 0 1 21 16.5z"/>
+          </svg>
+        </span>
+        <div class="help-meta">
+          <span class="help-label">Returns & Support</span>
+          <span class="help-number">87504 02024</span>
+          <span class="help-cta">Tap to Call</span>
+        </div>
+      </a>
+
+      <!-- Card 4 -->
+      <a class="help-card shine" href="tel:+919671228883" aria-label="Call 9671228883">
+        <span class="help-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
+            <path d="M21 16.5v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07A19.5 19.5 0 0 1 3.57 9.81 19.79 19.79 0 0 1 .5 1.18 2 2 0 0 1 2.5 0h3a2 2 0 0 1 2 1.72c.12.9.33 1.77.63 2.6a2 2 0 0 1-.45 2.11L6.5 7.5a16 16 0 0 0 10 10l1.07-1.18a2 2 0 0 1 2.11-.45c.83.3 1.7.51 2.6.63A2 2 0 0 1 21 16.5z"/>
+          </svg>
+        </span>
+        <div class="help-meta">
+          <span class="help-label">Head Office</span>
+          <span class="help-number">96712 28883</span>
+          <span class="help-cta">Tap to Call</span>
+        </div>
+      </a>
+    </div>
+  </div>
+</section>
 
       <!-- Offer -->
       <div style="margin:12px 0;">
@@ -640,6 +776,7 @@
   </script>
 </body>
 </html>
+
 
 
 
