--- a/index.html
+++ b/index.html
@@ -326,23 +326,23 @@
         </article>
 
          <article class="card">
-          <div class="image-frame"><img src="new.png" alt="XL+ (Straight Sanitary Pad)"></div>
+          <div class="image-frame"><img src="s1.png" alt="XL+ (Straight Sanitary Pad)"></div>
           <h3>Saheli Care XL+ (Straight Sanitary pads)</h3>
           <div class="price">₹230 / 10 Pack (Per Packet 6 pads)</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('XL+ 10 pack (Straight Sanitary Pad)','₹230','new.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('XL+ 10 pack (Straight Sanitary Pad)','₹230','s1.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="XXL 10 pack (Straight Sanitary Pad)" data-price="₹230">Order via WhatsApp</button>
           </div>
         </article>
 
          <article class="card">
-          <div class="image-frame"><img src="new.png" alt="XL+ (Straight Sanitary Pad)"></div>
+          <div class="image-frame"><img src="s2.png" alt="XL+ (Straight Sanitary Pad)"></div>
           <h3>Saheli Care XL+ (Straight Sanitary pads)</h3>
           <div class="price">₹270 / 10 Pack (Per Packet 7 pads)</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('XL+ 10 pack (Straight Sanitary Pad)','₹270','new.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('XL+ 10 pack (Straight Sanitary Pad)','₹270','s2.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="XXL 10 pack (Straight Sanitary Pad)" data-price="₹270">Order via WhatsApp</button>
           </div>
         </article>
@@ -798,6 +798,7 @@
   </script>
 </body>
 </html>
+
 
 
 
