--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
         </article>
 
          <article class="card">
-          <div class="image-frame"><img src="s1.png" alt="XL+ (Straight Sanitary Pad)"></div>
+          <div class="image-frame"><img src="s3.png" alt="XL+ (Straight Sanitary Pad)"></div>
           <h3>Saheli Care XL+ (Straight Sanitary pads)</h3>
-          <div class="price">₹230 / 10 Pack (Per Packet 6 pads)</div>
+          <div class="price">₹249 / 10 Pack (Per Packet 6 pads)</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('XL+ 10 pack (Straight Sanitary Pad)','₹230','s1.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('XL+ 10 pack (Straight Sanitary Pad)','₹230','s3.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="XXL 10 pack (Straight Sanitary Pad)" data-price="₹230">Order via WhatsApp</button>
           </div>
         </article>
@@ -548,8 +548,8 @@
             <input id="custName" name="custName" type="text" required placeholder="Full name" />
           </div>
           <div class="field">
-            <label for="custPhone">Phone</label>
-            <input id="custPhone" name="custPhone" type="tel" required placeholder="e.g. 9876543210" />
+            <label for="custPhone">Mobile Number</label>
+            <input id="custPhone" name="custPhone" type="tel" required placeholder="+91**********" />
           </div>
         </div>
 
@@ -568,10 +568,10 @@
           <div class="field" style="width:120px">
             <label for="custQty">Quantity</label>
             <select id="custQty" name="custQty">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
+              <option value="10">10</option>
+              <option value="20">20</option>
+              <option value="30">30</option>
+              <option value="40">40</option>
             </select>
           </div>
           <div style="flex:1"></div>
@@ -798,6 +798,7 @@
   </script>
 </body>
 </html>
+
 
 
 
