--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
           <div class="price">₹249 / 10 Pack (Per Packet 6 pads)</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('XL+ 10 pack (Straight Sanitary Pad)','₹230','s3.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="XXL 10 pack (Straight Sanitary Pad)" data-price="₹230">Order via WhatsApp</button>
+            <button class="btn btn-outline" onclick="openModal('XL+ 10 pack (Straight Sanitary Pad)','₹249','s3.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XL+ 10 pack (Straight Sanitary Pad)" data-price="₹249">Order via WhatsApp</button>
           </div>
         </article>
 
@@ -798,6 +798,7 @@
   </script>
 </body>
 </html>
+
 
 
 
