--- a/index.html
+++ b/index.html
@@ -293,24 +293,24 @@
 
       <div class="products-grid" role="list">
         <article class="card" role="listitem">
-          <div class="image-frame"><img src="5.png" alt="XL (without chip Try-fold Pad)"></div>
-          <h3>Saheli Care (XL Pads) Try-fold (Soft & Comfortable)</h3>
-          <div class="price">₹299 / 10 Pack <br>(per packet 6 pads) <br>(Limited Time Offer) <br> 100 ML Observation</div>
+          <div class="image-frame"><img src="10.png" alt="XL (without chip Try-fold Pad)"></div>
+          <h3>Saheli Care (XL Pads) Anion Chip (Soft & Comfortable)</h3>
+          <div class="price">₹350 / 10 Pack <br>(per packet 6 pads) <br>(Limited Time Offer) <br> 100 ML Observation</div>
           <p style="color:var(--muted)">Comfort fit for daily use, thin and absorbent.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('XL (without chip Try-fold Pad)','₹250','5.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="XL (without chip Try-fold Pad)" data-price="₹250">Order via WhatsApp</button>
+            <button class="btn btn-outline" onclick="openModal('XL (Anion Chip Pads)','₹350','10.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XL (Anion Chip Pads)" data-price="₹350">Order via WhatsApp</button>
           </div>
         </article>
 
         <article class="card">
-          <div class="image-frame"><img src="2.png" alt="XL (Anion Chip ,Magic Gel Pads)"></div>
-          <h3>Saheli Care XL Pads (Anion Chip, Magic Gel Pads)</h3>
-          <div class="price">₹350 / 10 Pack <br>(per packet 6 pads) <br>(Limited Time Offer) <br> 150 ML Observation</div>
+          <div class="image-frame"><img src="11.png" alt="XXL (Anion Chip ,Magic Gel Pads)"></div>
+          <h3>Saheli Care XXL Pads (Anion Chip, Magic Gel Pads)</h3>
+          <div class="price">₹399 / 10 Pack <br>(per packet 6 pads) <br>(Limited Time Offer) <br> 150 ML Observation</div>
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('XL (Anion Chip ,Magic Gel Pads)','₹350','2.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="XL (Anion Chip ,Magic Gel Pads)" data-price="₹350">Order via WhatsApp</button>
+            <button class="btn btn-outline" onclick="openModal('XXL (Anion Chip ,Magic Gel Pads)','₹399','11.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XXL (Anion Chip ,Magic Gel Pads)" data-price="₹399">Order via WhatsApp</button>
           </div>
         </article>
 
@@ -798,6 +798,7 @@
   </script>
 </body>
 </html>
+
 
 
 
