--- a/index.html
+++ b/index.html
@@ -234,6 +234,30 @@
 }
 .help-card.shine:hover::after{ left:120%; }
 
+    body {
+  margin: 0;
+  padding: 0;
+}
+
+.banner-slider {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.banner-slider img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.banner-slider img.active {
+  opacity: 1;
+}
   </style>
 </head>
 <body>
@@ -281,10 +305,12 @@
         <p style="color:var(--muted)">Designed for comfort and confidence. Thin, absorbent, and breathable — stay comfortable through the day and night.</p>
         <a class="wa-btn" href="#products" style="display:inline-block;margin-top:8px">Shop Pads</a>
       </div>
-      <div class="banner-slider">
-        <img src="banner.png" alt="Saheli Care Banner 1" class="active">
-        <img src="new postrer.png" alt="Saheli Care Banner 2">
-      </div>
+    <div class="banner-slider">
+    <img src="banner.png" class="slide active" alt="Saheli Care Banner 1">
+    <img src="new postrer.png" class="slide" alt="Saheli Care Banner 2">
+    <img src="banner3.png" class="slide" alt="Saheli Care Banner 3">
+  </div>
+
     </section>
 
     <!-- PRODUCTS -->
@@ -783,9 +809,23 @@
       setInterval(showNextImage, 4000);
 
     })();
+    let slides = document.querySelectorAll('.banner-slider .slide');
+let currentIndex = 0;
+
+function showNextSlide() {
+  slides[currentIndex].classList.remove('active');
+  currentIndex = (currentIndex + 1) % slides.length;
+  slides[currentIndex].classList.add('active');
+}
+
+// Auto slide every 3 seconds
+setInterval(showNextSlide, 3000);
+
   </script>
+  
 </body>
 </html>
+
 
 
 
