--- a/index.html
+++ b/index.html
@@ -233,31 +233,25 @@
   pointer-events:none;
 }
 .help-card.shine:hover::after{ left:120%; }
-
-    body {
-  margin: 0;
-  padding: 0;
+.banner-slider{
+  width:100%;
+  overflow:hidden;
+  border-radius:14px;
 }
 
-.banner-slider {
-  position: relative;
-  width: 100%;
-  height: 400px;
-  overflow: hidden;
+.slider-track{
+  display:flex;
+  transition:transform 1s ease-in-out;
 }
 
-.banner-slider img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
+.slider-track img{
+  width:100%;
+  height:auto;
+  flex-shrink:0;
+  object-fit:contain; /* mobile par image cut nahi hoti */
 }
 
-.banner-slider img.active {
-  opacity: 1;
-}
+   
   </style>
 </head>
 <body>
@@ -305,12 +299,14 @@
         <p style="color:var(--muted)">Designed for comfort and confidence. Thin, absorbent, and breathable — stay comfortable through the day and night.</p>
         <a class="wa-btn" href="#products" style="display:inline-block;margin-top:8px">Shop Pads</a>
       </div>
-    <div class="banner-slider">
-    <img src="banner.png" class="slide active" alt="Saheli Care Banner 1">
-    <img src="new postrer.png" class="slide" alt="Saheli Care Banner 2">
-    <img src="banner3.png" class="slide" alt="Saheli Care Banner 3">
-  </div>
 
+      <div class="banner-slider">
+  <div class="slider-track">
+    <img src="banner.png" alt="Banner 1">
+    <img src="new postrer.png" alt="Banner 2">
+    <img src="banner3.png" alt="Banner 3">
+  </div>
+</div>
     </section>
 
     <!-- PRODUCTS -->
@@ -809,22 +805,23 @@
       setInterval(showNextImage, 4000);
 
     })();
-    let slides = document.querySelectorAll('.banner-slider .slide');
-let currentIndex = 0;
-
-function showNextSlide() {
-  slides[currentIndex].classList.remove('active');
-  currentIndex = (currentIndex + 1) % slides.length;
-  slides[currentIndex].classList.add('active');
-}
-
-// Auto slide every 3 seconds
-setInterval(showNextSlide, 3000);
+   
 
   </script>
+  <script>
+const track = document.querySelector('.slider-track');
+const slides = document.querySelectorAll('.slider-track img');
+let index = 0;
+
+setInterval(()=>{
+  index = (index + 1) % slides.length;
+  track.style.transform = `translateX(-${index * 100}%)`;
+},3500);
+</script>
   
 </body>
 </html>
+
 
 
 
