--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
 
       <div class="banner-slider">
   <div class="slider-track">
-    <img src="banner.png" alt="Banner 1">
-    <img src="new postrer.png" alt="Banner 2">
-    <img src="banner3.png" alt="Banner 3">
+    <img src="offer1.png" alt="Banner 1">
+    <img src="offer2.png" alt="Banner 2">
+   
   </div>
 </div>
     </section>
@@ -821,6 +821,7 @@ setInterval(()=>{
   
 </body>
 </html>
+
 
 
 
