--- a/index.html
+++ b/index.html
@@ -269,11 +269,42 @@
     max-height:260px;
   }
 }
+/* ===== NEW YEAR FALL ANIMATION ===== */
+#newyear-container{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  pointer-events:none;
+  overflow:hidden;
+  z-index:9999;
+}
+
+.ny-item{
+  position:absolute;
+  top:-60px;
+  font-size:26px;
+  animation:ny-fall linear forwards;
+  opacity:0.95;
+}
+
+@keyframes ny-fall{
+  0%{
+    transform: translateY(0) rotate(0deg);
+    opacity:1;
+  }
+  100%{
+    transform: translateY(120vh) rotate(540deg);
+    opacity:0;
+  }
+}
 
    
   </style>
 </head>
 <body>
+<div id="newyear-container"></div>
 
   <!-- Header -->
   <header>
@@ -831,10 +862,39 @@ setInterval(()=>{
 }, 4000);
 </script>
 
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const container = document.getElementById("newyear-container");
+
+  const items = [
+    "🎉","🎊","✨","💫","🥳","🎆","🎇","🍾","🥂","🎈"
+  ];
+
+  const totalItems = 45; // quantity
+
+  for(let i = 0; i < totalItems; i++){
+    const el = document.createElement("div");
+    el.className = "ny-item";
+    el.innerText = items[Math.floor(Math.random() * items.length)];
+
+    el.style.left = Math.random() * 100 + "vw";
+    el.style.fontSize = (18 + Math.random() * 22) + "px";
+    el.style.animationDuration = (5 + Math.random() * 4) + "s";
+    el.style.animationDelay = (Math.random() * 2) + "s";
+
+    container.appendChild(el);
+
+    setTimeout(() => {
+      el.remove();
+    }, 10000);
+  }
+});
+</script>
 
   
 </body>
 </html>
+
 
 
 
